--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
                     <a class="text" href="" style="text-decoration: none; color: black;">Imágenes</a>
                 </div>
                 <div class="logo" id="logos3">
-                    <img src="/css/google-apps.png" alt="" class="icon">
+                    <img src="https://raw.githubusercontent.com/jnsoler12012/google-homepage/master/css/google-apps.png" alt="" class="icon">
                 </div>
                 <div class="logo" id="logos4">
-                    <img src="/css/usericon.png" alt="" class="icon">
+                    <img src="https://raw.githubusercontent.com/jnsoler12012/google-homepage/master/css/usericon.png" alt="" class="icon">
                 </div>
    
             </div> 
@@ -38,7 +38,7 @@
       <div class="container3">
           <div class="searchbox">
               <div class="searchimg" >
-                  <img class="searchicon" src="/css/search.png">
+                  <img class="searchicon" src="https://raw.githubusercontent.com/jnsoler12012/google-homepage/master/css/search.png">
               </div>
               <input type="text" id="text" name="text">
           </div>
